1998-11-28  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l, parser.y, util.c, IDL.h: Change iid_ident to
	infotag_ident (TOK_IID_IDENT -> TOK_INFOTAG), which is more unique
	in scanning, and slightly more general.

	* util.c (IDL_tree_free): Update for interface iid, and varargs.
	(IDL_tree_walk_in_order): Same.
	(IDL_type_varargs_new): New function.

	* Makefile.am: Add G_LOG_DOMAIN for libIDL.

	* lexer.l: Add XPIDL conditional token scan for TOK_VARARGS
	(...).  Add token scan for iid_ident, which is an extended version
	of a standard IDL identifier, for XPIDL IIDs.

	* parser.y: Add XPIDL IID interface tagging
	support. (interface_iid) New production, update (interface) to
	handle it. Generate error if XPIDL syntax is not enabled and an
	IID is provided. New token, TOK_IID_IDENT, iid_ident rule.

	* lexer.l: Only recognize TypeCode when IDLF_TYPECODES syntax
	flag is present.

	* IDL.h (IDLF_TYPECODES): New flag; IDLF_TYPECODES.  New type
	IDLN_TYPE_VARARGS, eventually for use with XPIDL.

1998-11-27  Andrew T. Veliath  <andrewtv@usa.net>

	* libIDL.def: New file.

	* util.h (alloca): Define if compiling for Win32.

	* Makefile.am (MAINTAINERCLEANFILES): Change to maintainer clean
	from dist clean for parser.c, lexer.c.  It's nice to have the
	generated parsers around from flex and bison, especially for
	Win32.

	* util.c (IDL_parse_filename): Don't use access under Win32.
	IDL_EXPORT __IDL_check_type_casts.

	* IDL.h (IDL_IMPORT): Add definitions required for Win32.

	* Makefile.msc:
	README.win32: New files.

	* Makefile.am: Define YYERROR_VERBOSE for slightly better messages
	in unhandled error situations.

1998-11-20  Andrew T. Veliath  <andrewtv@usa.net>

	* tstidl.c (print_ident_comments): Print out identifiers and any
	comments.

	* util.c (IDL_parse_filename): Init __IDL_new_ident_comments, then
	free any remaining on return from parsing.  Same for
	IDL_parse_filename_with_input.
	(IDL_tree_free_real): Free comments of identifier.
