@@ -1,10 +1,18 @@
+#ifdef G_LOG_DOMAIN
+#  undef G_LOG_DOMAIN
+#endif
+#define G_LOG_DOMAIN		"tstidl"
 #include <assert.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
 #include <ctype.h>
 #include <glib.h>
-#include "util.h"
+#ifdef IDL_LIBRARY
+#include "IDL.h"
+#else
+#include <libIDL/IDL.h>
+#endif
 
 gboolean print_repo_id (IDL_tree p, gpointer user_data)
 {
@@ -112,6 +120,7 @@ int main (int argc, char *argv[])
 	IDL_tree tree;
 	IDL_ns ns;
 	char *fn;
+	unsigned long parse_flags = 0;
 
 #ifndef _WIN32
 	{ extern int __IDL_debug;
@@ -121,43 +130,47 @@ int main (int argc, char *argv[])
 	IDL_check_cast_enable (TRUE);
 
 	if (argc < 2) {
-		fprintf (stderr, "usage: tstidl <filename> [inhibit constant folding (0 or 1)]\n");
+		fprintf (stderr, "usage: tstidl <filename> [parse flags, hex]\n");
 		exit (1);
 	}
 
 	fn = argv[1];
+	if (argc >= 3)
+		sscanf (argv[2], "%lx", &parse_flags);
 	
 #ifdef TEST_INPUT_CB
 	{ struct my_input_cb_data input_cb_data;
 	g_message ("IDL_parse_filename_with_input");
-	rv = IDL_parse_filename_with_input (fn, my_input_cb, &input_cb_data,
-					    NULL, &tree, &ns,
-					    argc == 3 ? atoi (argv[2]) : 0, IDL_WARNING1);
+	rv = IDL_parse_filename_with_input (
+		fn, my_input_cb, &input_cb_data,
+		NULL, &tree, &ns, parse_flags,
+		IDL_WARNING1);
 	}
 #else
 	g_message ("IDL_parse_filename");
-	rv = IDL_parse_filename (fn, NULL, NULL, &tree, &ns,
-				 argc == 3 ? atoi (argv[2]) : 0, IDL_WARNING1);
+	rv = IDL_parse_filename (
+		fn, NULL, NULL, &tree, &ns,
+		parse_flags, IDL_WARNING1);
 #endif
 
-	if (rv == IDL_SUCCESS) {
-		printf ("Repository IDs\n");
-		IDL_tree_walk_in_order (tree, print_repo_id, NULL);
-		printf ("\nConstant Declarations\n");
-		IDL_tree_walk_in_order (tree, print_const_dcls, NULL);
-		printf ("\nIdentifiers\n");
-		IDL_tree_walk_in_order (tree, print_ident_comments, NULL);
-		IDL_ns_free (ns);
-		IDL_tree_free (tree);
-	}
-	else if (rv == IDL_ERROR) {
-		fprintf (stderr, "tstidl: IDL_ERROR\n");
+	if (rv == IDL_ERROR) {
+		g_message ("IDL_ERROR");
 		exit (1);	
-	}
-	else if (rv < 0) {
+	} else if (rv < 0) {
 		perror (fn);
 		exit (1);
 	}
+
+	/* rv == IDL_SUCCESS */
+	
+	printf ("Repository IDs\n");
+	IDL_tree_walk_in_order (tree, print_repo_id, NULL);
+	printf ("\nConstant Declarations\n");
+	IDL_tree_walk_in_order (tree, print_const_dcls, NULL);
+	printf ("\nIdentifiers\n");
+	IDL_tree_walk_in_order (tree, print_ident_comments, NULL);
+	IDL_ns_free (ns);
+	IDL_tree_free (tree);
 	
 	return 0;
 }
